Fix for navbar logo on hover - navbar text overlayed logo - fixed w/ higher z-index

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -21,6 +21,7 @@
   // Mobile view
   .mobile-logo, .logo
     position: absolute
+    z-index: 3
     margin-top: -7px
     display: inline
     float: left
